# kwin-effects-shake-cursor-extreme

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  metadata.json  shakecursor.cpp  shakecursor.h  shakecursorconfig.kcfgc  shakedetector.cpp  shakedetector.h  test.qml
src/qml/: Main.qml
